<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLight"
    tools:context=".viewcontrollers.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.fragment.app.FragmentContainerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="5dp"
            android:layout_alignParentTop="true"
            android:backgroundTint="@color/background"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="30dp">
            <TextView
                android:id="@+id/search_label"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="15dp"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/search_place"
                android:textColor="@color/white"
                android:background="@color/transparent"
                android:drawablePadding="10dp"
                app:drawableLeftCompat="@android:drawable/ic_menu_search" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/info_card_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-30dp"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/background"
            app:cardCornerRadius="30dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="95dp"
                android:layout_marginHorizontal="20dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/place_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/base_location_name_default"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/roboto_medium"/>
                    <TextView
                        android:id="@+id/place_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/base_location_desc_default"
                        android:textColor="@color/white"
                        android:fontFamily="@font/roboto_regular"
                        android:justificationMode="inter_word"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/route_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:visibility="gone">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/baseline_route_40"
                        android:contentDescription="@string/route_icon"
                        app:tint="@color/primary"/>
                    <TextView
                        android:id="@+id/distance_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/distance_route_default"/>
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/baseline_access_time_40"
                        android:contentDescription="@string/duration_icon"
                        app:tint="@color/primary"/>
                    <TextView
                        android:id="@+id/duration_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/duration_route_default"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <ImageView
            android:id="@+id/google_watermark_image"
            android:layout_width="55dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/info_card_container"
            android:src="@drawable/google_logo"
            android:contentDescription="@string/google_watermark"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/my_location_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentEnd="true"
            android:layout_above="@+id/clear_map_fab"
            android:src="@drawable/baseline_near_me_40"
            android:tint="@color/white"
            android:contentDescription="@string/clear_map_fab"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/clear_map_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="20dp"
            android:layout_alignParentEnd="true"
            android:layout_above="@+id/info_card_container"
            android:src="@drawable/baseline_clear_40"
            android:tint="@color/white"
            android:contentDescription="@string/my_location_fab"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>


