<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingVertical="8dp"
        android:paddingHorizontal="20dp">
        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:background="@drawable/circle_style">
            <ImageView
                android:id="@+id/item_main_image"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/baseline_place_35"
                android:contentDescription="@string/item_place_icon"
                app:tint="@color/white" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="20dp">
            <TextView
                android:id="@+id/place_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/place_default_title"/>
            <TextView
                android:id="@+id/place_desc_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/place_default_description"
                android:textColor="@color/white"/>
            <View
                android:id="@+id/place_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/darker_gray" />
        </LinearLayout>
        <ImageView
            android:id="@+id/item_action_image"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/baseline_arrow_outward_40"
            android:contentDescription="@string/item_action_icon"
            app:tint="@color/white"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>