<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLight"
    tools:context=".viewcontrollers.SearchPlacesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/background"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="30dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:paddingHorizontal="5dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/back_image"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/baseline_arrow_back_ios_new_40"
                    android:contentDescription="@string/back_icon"
                    app:tint="@color/white"/>
                <EditText
                    android:id="@+id/search_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="15dp"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/search_place"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:background="@color/transparent"
                    android:autofillHints=""/>
                <ImageView
                    android:id="@+id/clean_search_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/baseline_clear_40"
                    android:contentDescription="@string/clean_search_icon"
                    android:backgroundTint="@color/white"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/clear_history_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="end"
            android:padding="5dp"
            android:visibility="gone"
            android:gravity="end"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/clear_history"
            android:textColor="@color/white"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/recycler_card_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/background"
            android:visibility="gone"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="30dp">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/places_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"/>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:id="@+id/state_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-40dp"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/empty_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/no_data"
                android:textColor="@color/white"
                android:textSize="20sp"/>
            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>